--- a/Inv/Inv/Resources/Resource.resx
+++ b/Inv/Inv/Resources/Resource.resx
@@ -246,4 +246,10 @@
   <data name="Exit" xml:space="preserve">
 	<value>Close session</value>
   </data>
+  <data name="InventoryCount" xml:space="preserve">
+    <value>Inventory Count</value>
+  </data>
+  <data name="NoCountsMessage" xml:space="preserve">
+    <value>No Inventory counts information available.</value>
+  </data>
 </root>
