--- a/Inv/Inv/Resources/Resource.es.resx
+++ b/Inv/Inv/Resources/Resource.es.resx
@@ -255,4 +255,7 @@
   <data name="ItemsList" xml:space="preserve">
     <value>Lista de artículos</value>
   </data>
+  <data name="Scan" xml:space="preserve">
+    <value>Escanear</value>
+  </data>
 </root>
