--- a/Inv/Inv/Resources/Resource.resx
+++ b/Inv/Inv/Resources/Resource.resx
@@ -258,4 +258,7 @@
   <data name="Scan" xml:space="preserve">
     <value>Scan</value>
   </data>
+  <data name="New" xml:space="preserve">
+    <value>New</value>
+  </data>
 </root>
