--- a/Inv/Inv/Resources/Resource.pt.resx
+++ b/Inv/Inv/Resources/Resource.pt.resx
@@ -261,4 +261,16 @@
   <data name="New" xml:space="preserve">
     <value>Novo!</value>
   </data>
+  <data name="NoItemsMessage" xml:space="preserve">
+    <value>Não há informações de itens disponíveis!</value>
+  </data>
+  <data name="NoMeasureUnitsMessage" xml:space="preserve">
+    <value>Não há informações de unidades de medida disponíveis!</value>
+  </data>
+  <data name="NoLocationMessage" xml:space="preserve">
+    <value>Nenhuma informação de localização disponível!</value>
+  </data>
+  <data name="NoBinsMessage" xml:space="preserve">
+    <value>Nenhuma informação de localização escaninhos disponível!</value>
+  </data>
 </root>
