--- a/Inv/Inv/Resources/Resource.it.resx
+++ b/Inv/Inv/Resources/Resource.it.resx
@@ -267,10 +267,19 @@
   <data name="NoMeasureUnitsMessage" xml:space="preserve">
     <value>Nessuna informazione di unità misura disponibile!</value>
   </data>
-  <data name="NoLocationMessage" xml:space="preserve">
-    <value>Non sono disponibili informazioni di posizione!</value>
-  </data>
   <data name="NoBinsMessage" xml:space="preserve">
     <value>Non sono disponibili informazioni di posizione bidoni!</value>
+  </data>
+  <data name="NoLocationsMessage" xml:space="preserve">
+    <value>Non sono disponibili informazioni di posizioni!</value>
+  </data>
+  <data name="MeasureUnit" xml:space="preserve">
+    <value>Unità di misura</value>
+  </data>
+  <data name="Location" xml:space="preserve">
+    <value>Percorso</value>
+  </data>
+  <data name="Bin" xml:space="preserve">
+    <value>LOCALIZZAZIONE</value>
   </data>
 </root>
