--- a/Inv/Inv/Resources/Resource.resx
+++ b/Inv/Inv/Resources/Resource.resx
@@ -267,10 +267,19 @@
   <data name="NoMeasureUnitsMessage" xml:space="preserve">
     <value>No Measure units information available</value>
   </data>
-  <data name="NoLocationMessage" xml:space="preserve">
-    <value>No Location information available</value>
+  <data name="NoLocationsMessage" xml:space="preserve">
+    <value>No Locations information available</value>
   </data>
   <data name="NoBinsMessage" xml:space="preserve">
     <value>No Location Bins information available</value>
+  </data>
+  <data name="MeasureUnit" xml:space="preserve">
+    <value>Unit of Measurement</value>
+  </data>
+  <data name="Location" xml:space="preserve">
+    <value>Location</value>
+  </data>
+  <data name="Bin" xml:space="preserve">
+    <value>Location bin</value>
   </data>
 </root>
